# meetings-cli

./: .gitignore  Cargo.toml  README.md
skills/meetings-cli/: SKILL.md
src/: index.rs  lib.rs  main.rs  mcp.rs  models.rs  search.rs  store.rs
