[package]
name = "meetings"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
bincode = "1"
rayon = "1"
